
	* gtk/gtk.defs (gtk_tool_item_set_proxy_menu_item) Allow menu_item
	to be NULL.
	(gtk_tool_item_set_tooltip) Allow parameters tip_text and tip_private
	to be NULL. Default these to NULL.

	* gtk/gtk.defs Make gtk_tooltips_get_info_from_tip_window a method
	of GtkWindow.

	* gtk/gtk.override (_wrap_gtk_tooltips_get_info_from_tip_window) Add.

2004-04-16  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override Expanded gtk_draw_* since it excluded new
	gtk_draw_insertion_cursor function.

	* gtk/gtk.override Add definition of PyGdkDrawable_Type

	* gtk/gtk.defs (gtk_draw_insertion_cursor) area can be NULL.
	(gtk_text_buffer_paste_clipboard) override_location can be NULL.

	* gtk/gtktextview.override (_wrap_gtk_text_tag_table_foreach) Add.

	* gtk/gtk.override (_wrap_gtk_toggle_tool_button_new) Allow an
	optional stock_id parameter.
	(gtk_toggle_tool_button_new_from_stock) Ignore.

	* gtk/gtk.defs (gtk_toolbar_insert) (gtk_toolbar_get_item_index)
	(gtk_toolbar_get_n_items) (gtk_toolbar_get_nth_item)
	(gtk_toolbar_get_drop_index) (gtk_toolbar_set_drop_highlight_item)
	(gtk_toolbar_set_show_arrow) (gtk_toolbar_get_show_arrow)
	(gtk_toolbar_get_relief_style) Add new toolbar methods from GTK+ 2.4
	
	(gtk_toolbar_append_item) (gtk_toolbar_prepend_item)
	(gtk_toolbar_insert_item) (gtk_toolbar_insert_stock)
	(gtk_toolbar_append_space) (gtk_toolbar_prepend_space)
	(gtk_toolbar_insert_space) (gtk_toolbar_remove_space)
	(gtk_toolbar_append_element) (gtk_toolbar_prepend_element)
	(gtk_toolbar_insert_element) (gtk_toolbar_append_widget)
	(gtk_toolbar_prepend_widget) (gtk_toolbar_insert_widget)
	(gtk_toolbar_set_icon_size) (gtk_toolbar_unset_icon_size)
	Add deprecations for these old toolbar methods.

	* gtk/gtk.override (_wrap_gtk_toolbar_append_item)
	(_wrap_gtk_toolbar_prepend_item) (_wrap_gtk_toolbar_insert_item)
	(_wrap_gtk_toolbar_insert_stock) (_wrap_gtk_toolbar_append_element)
	(_wrap_gtk_toolbar_prepend_element) (_wrap_gtk_toolbar_insert_element)