@@ -12,6 +12,9 @@
 
 	* gtk/gtk.override (_wrap_gtk_tooltips_get_info_from_tip_window) Add.
 
+	* codegen/argtypes.py (GtkTreePath) Remove extra older null assignment
+	- the one assuming a tree path is a tuple.
+
 2004-04-16  John Finlay  <finlay@moeraki.com>
 
 	* gtk/gtk.override Expanded gtk_draw_* since it excluded new
